--- a/css/business-casual.css
+++ b/css/business-casual.css
@@ -101,7 +101,7 @@ hr {
 }
 
 .tab-box h4 {
-    text-align: center;
+    text-align: left;
     color: #333333;
 }
 .intro-text {
@@ -142,13 +142,21 @@ footer p {
 .brand {
   display: inherit;
   font-weight: 700;
-  font-size: 2em;
+  font-size: 3em;
   line-height: normal;
   text-align: left;
   margin: 0;
-  padding: 30px 0 30px 10px;
+  padding: 10px 0 10px 10px;
   color: #fff;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+}
+
+.brand a,
+.brand a:focus,
+.brand a:active,
+.brand a:hover {
+    color: #FFFFFF;
+    text-decoration: none;
 }
 
 .top-divider {
@@ -201,11 +209,36 @@ footer p {
 }
 
 .navbar-nav {
-  float: none;
-  margin: 0 auto;
+  float: left;
   display: table;
   table-layout: fixed;
   font-size: 1.25em;
+  padding-left: 0;
+}
+
+.services-img {
+    background: url(../img/bg.jpg) no-repeat center center;
+    height: 300px;
+}
+
+.services-img-alt {
+    background: url(../img/civil.jpg) no-repeat center center;
+    height: 300px;
+}
+
+.resources-info a {
+    display: block;
+}
+
+.resources-container {
+    background-color: #2E2926;
+}
+
+.logo {
+    height: 100px;
+    width: 100px;
+    display: inline;
+    margin-right: 10px;
 }
 
 }
