--- a/css/base.css
+++ b/css/base.css
@@ -1,11 +1,5 @@
 body {
-  /*background: url(../img/bg.jpg) no-repeat center center fixed; */
-  /*-webkit-background-size: cover;*/
-  /*-moz-background-size: cover;*/
-  /*-o-background-size: cover;*/
-  /*background-size: cover;*/
   background-color: #5A5551;
-  
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -175,43 +169,24 @@ footer p {
 }
 
 .services-img {
-    height: 300px;
-    position: relative;
-    
-}
-
-div.services-img::after {
-  content: "";
-  background-image: url("../img/bg.jpg");
-  opacity: 0.5;
-  z-index: -1;   
+  max-width:100%;
+  max-height: 100%;
   background-size:cover;
-  background-position:center center;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  position: absolute;
+  background-position:top center;
+  height: 300px;
 }
 
-.services-img-alt {
-    height: 300px;
-    position: relative;
-    
+.service-container .row {
+  background: #ECEBE9;
+  margin-top: 20px;
 }
 
-div.services-img-alt::after {
-  content: "";
-  background-image: url("../img/civil.jpg");
-  background-size:cover;
-  background-position:center center;
-  opacity: 0.5;
-  z-index: -1;   
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
+.services-content h2 {
+  padding: 20px 10px 10px 10px;
+}
+
+.service-content-text {
+  padding: 10px 5px;
 }
 
 @media screen and (min-width: 768px) {
@@ -298,12 +273,6 @@ div.services-img-alt::after {
       table-layout: fixed;
       font-size: 1em;
       padding-left: 0;
-    }
-    
-
-    
-    .resources-info a {
-        display: block;
     }
     
     .resources-container {
