--- a/css/base.css
+++ b/css/base.css
@@ -1,5 +1,6 @@
 body {
   background-color: #EEEEEE;
+  letter-spacing: 0.5px;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -138,12 +139,6 @@ hr {
   font-weight: 400;
 }
 
-.img-border {
-  float: none;
-  margin: 0 auto 0;
-  border: #999999 solid 1px;
-}
-
 .img-left {
   float: none;
   margin: 0 auto 0;
@@ -151,10 +146,11 @@ hr {
 
 footer p {
   margin: 0;
-  padding: 30px 0;
-  color: #2E2926;
-  font-weight: bold;
-  font-size: 14px;
+  padding: 20px 0;
+  color: #999999;
+  font-weight: normal;
+  font-size: 15px;
+  letter-spacing: 2px;
 }
 
 .navbar {
@@ -209,6 +205,45 @@ footer p {
 .contact-number {
   font-size: 0.5em;
   padding: 15px;
+}
+
+.img-stripe-border {
+  display: block;
+  background: #fff url("../img/stripe.png");
+  padding: 10px;
+  box-shadow: 3px 3px 3px 1px rgba(0, 0, 0, 0.15);
+  margin: 0 0 1.5em 0;
+  outline: 0;
+}
+
+.page-content-section {
+  margin-top: 20px;
+} 
+
+footer {
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.banner img {
+  max-height: 200px;
+}
+
+.services section{
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.services img {
+  max-height: 150px;
+}
+
+.services h4 {
+  text-align: center;
+}
+
+.banner {
+  font-size: 20px;
+  vertical-align: middle;
 }
 
 @media screen and (min-width: 768px) {
@@ -370,4 +405,17 @@ footer p {
       font-size: 1.25em;
       padding-left: 0;
     }
+    
+    .resources-info dt {
+      font-size: 1.5em;
+    }
+    
+    .resources-info dd {
+      font-size: 1.2em;
+    }
+    
+    .page-content-section {
+      margin-top: 40px;
+    }
+    
 }
