--- a/css/base.css
+++ b/css/base.css
@@ -287,12 +287,19 @@ section.additional-info {
 .services ul,
 .services-content ul {
   list-style-type: square;
-  list-style-position: inside;
+  list-style-position: outside;
+  margin-left: 1em;
+}
+
+.services li,
+.services-content li {
+  padding: 5px 0 5px 0;
 }
 
 .img-responsive {
   width: 100%;
   height: 180px;
+  max-width: 100%;
 }
 
 .contact-details {
