--- a/css/base.css
+++ b/css/base.css
@@ -180,7 +180,6 @@ footer p {
   box-shadow: 3px 3px 3px 1px rgba(0, 0, 0, 0.15);
   margin: 0 0 1.5em 0;
   outline: 0;
-  height: 200px;
 }
 
 .page-content-section {
@@ -293,7 +292,7 @@ section.additional-info {
 
 .img-responsive {
   width: 100%;
-  height: 180px;
+  height: auto;
   max-width: 100%;
 }
 
@@ -365,6 +364,11 @@ section.additional-info {
 .header-contact .fa {
   color: #FE8C1A;
   padding: 0 5px 0 5px;
+}
+
+.page-content img { 
+  display: block; 
+  max-width: 100%; 
 }
 
 @media screen and (min-width: 768px) {
